# stimmgabel

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  private_homeserver.pem  public_actor.pem
.github/workflows/: cross-build.yml
client/: Cargo.toml
client/src/: lib.rs
keys/: private_actor.pem  public_homeserver.pem
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: ascii.rs  cli.rs  errors.rs  lib.rs  main.rs  testcase.rs
src/client/: mod.rs
src/client/routes/: mod.rs
src/commands/: keys.rs  mod.rs  verify.rs
src/cryptography/: mod.rs
src/cryptography/ed25119/: mod.rs
src/polyproto/: keys.rs  message.rs  mod.rs  signature.rs
src/server/: mod.rs
