[package]
name = "stimmgabel"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/polyphony-chat/stimmgabel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net"] }
colored = "2.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
polyproto = "0.9.0-alpha.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
der = "0.7.8"
spki = "0.7.3"
thiserror = "1.0.57"
