[package]
name = "stimmgabel"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/polyphony-chat/stimmgabel"
categories = ["command-line-utilities", "development-tools::testing"]
description = " polyproto reference test implementation used for verifying other implementations of the protocol."

[lib]
name = "stimmgabellib"
crate-type = ["lib", "cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net"] }
colored = "2.1"
lazy_static = "1.4"
polyproto = "0.9.0-alpha.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bitflags = "2.5"
