[package]
name = "stimmgabel"
version = "1.0.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/polyphony-chat/stimmgabel"
categories = ["command-line-utilities", "development-tools::testing"]
description = "polyproto reference test implementation used for verifying other implementations of the protocol."

[dependencies]
polyproto = { git = "https://github.com/polyphony-chat/polyproto.git", branch = "routes", default-features = false }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net"] }
colored = "2.1"
lazy_static = "1.4"
ed25519-dalek = { version = "2.1", features = ["pem", "rand_core"] }
bitflags = "2.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
rand = "0.8"
