[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/polyphony-chat/stimmgabel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "macros", "net"] }
